elements/rh-card/rh-card.css
:host {
  container-name: card;
  container-type: inline-size;
}

:host([variant="promo"]) {
  container-name: card promo;
}

#header.empty,
#image.empty,
#footer.empty,
#body.empty {
  display: none !important;
}

::slotted(*) {
  line-height: inherit;
}

#container {
  align-self: stretch;
  display: flex;
  flex-direction: column;
  justify-items: flex-start;
  overflow: hidden;
  border-radius: var(--_border-radius, var(--rh-border-width-lg, 3px));
  font-family: var(--rh-font-family-body-text, RedHatText, "Red Hat Text", "Noto Sans Arabic", "Noto Sans Hebrew", "Noto Sans JP", "Noto Sans KR", "Noto Sans Malayalam", "Noto Sans SC", "Noto Sans TC", "Noto Sans Thai", Helvetica, Arial, sans-serif) !important;
  line-height: var(--rh-line-height-body-text, 1.5);
  border-style: solid;
  border-width: var(--rh-border-width-sm, 1px);
  width: 100%;
  height: 100%;
}

#container,
#container.light {
  color: var(--rh-color-text-primary-on-light, #151515);
  background-color: var(--rh-color-surface-lightest, #ffffff);
  border-color: var(--rh-color-border-subtle-on-light, #c7c7c7);
}

#container.dark {
  background-color: var(--rh-color-surface-darkest, #151515);
  color: var(--rh-color-text-primary-on-dark, #ffffff);
  border-color: var(--rh-color-border-subtle-on-dark, #707070);
}

#container.darker {
  background-color: var(--rh-color-surface-darker, #1f1f1f);
}

#container.lighter {
  background-color: var(--rh-color-surface-lighter, #f2f2f2);
}

#header,
#body,
#footer {
  margin-inline: var(--rh-space-xl, 24px);
}

#header ::slotted(:is(h1, h2, h3, h4, h5, h6)),
#body ::slotted(:is(h1, h2, h3, h4, h5, h6)) {
  font-family: var(--rh-font-family-heading, RedHatDisplay, "Red Hat Display", "Noto Sans Arabic", "Noto Sans Hebrew", "Noto Sans JP", "Noto Sans KR", "Noto Sans Malayalam", "Noto Sans SC", "Noto Sans TC", "Noto Sans Thai", Helvetica, Arial, sans-serif);
}

#image ::slotted(*) {
  display: block;
  max-width: 100%;
}

#header {
  display: flex;
  flex-direction: column;
  gap: var(--rh-space-lg, 16px);
  box-sizing: border-box;
  font-family: var(--rh-card-heading-font-family, var(--rh-font-family-heading, RedHatDisplay, "Red Hat Display", "Noto Sans Arabic", "Noto Sans Hebrew", "Noto Sans JP", "Noto Sans KR", "Noto Sans Malayalam", "Noto Sans SC", "Noto Sans TC", "Noto Sans Thai", Helvetica, Arial, sans-serif)) !important;
  font-size: var(--rh-card-heading-font-size, var(--rh-font-size-heading-sm, 1.5rem));
  font-weight:
    var(
        --rh-card-heading-font-weight,
        var(--rh-font-weight-body-text-medium, 500)
      ) !important;
  margin-block-start: var(--rh-space-lg, 16px);
}

#body {
  margin-block: var(--rh-space-2xl, 32px) var(--rh-space-xl, 24px);
}

#body:has(+ .empty) {
  margin-block-end: var(--rh-space-2xl, 32px);
}

#footer {
  display: flex;
  gap: 0.5em;
  margin-block: auto var(--rh-space-xl, 24px);
}

#container #header ::slotted(:is(h1, h2, h3, h4, h5, h6)),
#container #body ::slotted(:is(h1, h2, h3, h4, h5, h6)) {
  font-family: inherit !important;
  font-weight: inherit !important;
  line-height: var(--rh-line-height-heading, 1.3) !important;
}

#header ::slotted(:is(h1, h2, h3, h4, h5, h6)) {
  font-size: inherit !important;
  margin: unset;
}

#body ::slotted(:is(h1, h2, h3, h4, h5, h6)) {
  font-size: var(--rh-card-heading-font-size, var(--rh-font-size-heading-sm, 1.5rem)) !important;
}

#body ::slotted(:not([slot]):first-child) {
  margin-block-start: 0;
}

#body ::slotted(:not([slot]):last-child) {
  margin-block-end: 0;
}

@container card (min-width: 768px) {
  #header,
  #body,
  #footer {
    margin-inline: var(--rh-space-2xl, 32px);
  }

  #header,
  #body {
    margin-block-start: var(--rh-space-2xl, 32px);
  }

  #footer {
    margin-block-end: var(--rh-space-2xl, 32px);
  }
}

.has-image.has-header #image {
  order: -1;
}

.has-header.has-body #body {
  margin-block-end: var(--rh-space-2xl, 32px);
  margin-block-start: var(--rh-space-lg, 16px);
  margin-inline: var(--rh-space-2xl, 32px);
}

#container.promo {
  align-items: center;
  display: grid;
  height: auto;

  --_promo-standard-inline-padding: var(--rh-space-2xl, 32px);
  --_promo-image-width: 360px;
  --_promo-body-width: 750px;
  --_promo-heading-size: var(--rh-font-size-heading-xs, 1.25rem);
  --_promo-heading-font-weight: var(--rh-font-weight-heading-medium, 500);
  --_promo-heading-margin-block-end: var(--rh-space-lg, 16px);
  --_promo-paragraph-font-size: var(--rh-font-size-body-text-lg, 1.125rem);
  --_promo-paragraph-margin-block-end: var(--rh-space-lg, 16px);
}

#container.promo #image {
  order: 10;
}

#container.promo #image ::slotted(*) {
  object-fit: cover;
  width: 100%;
}

#container.promo #header {
  margin-block-start: var(--rh-space-md, 8px);
  margin-inline: 0;
}

#container.promo #header ::slotted(*) {
  font-size: var(--_promo-heading-size) !important;
  font-weight: var(--_promo-heading-font-weight) !important;
  margin-block-start: 0;
  margin-block-end: var(--_promo-heading-margin-block-end) !important;
}

#container.promo:is(.has-image, .has-header) #body ::slotted(p) {
  font-size: var(--_promo-paragraph-font-size) !important;
  margin-block-end: var(--_promo-paragraph-margin-block-end) !important;
}

#container.promo.has-header.has-body.has-footer:not(.has-image) {
  grid-template-columns: auto;
}

#container.promo.standard {
  grid-template: auto auto / auto;
  padding: var(--_promo-standard-inline-padding);
  gap: var(--rh-space-xl, 24px);
  width: calc(100% - 2 * var(--_promo-standard-inline-padding));
}

#container.promo.standard #body {
  display: contents;
}

#container.promo.standard #body ::slotted(:not([slot])) {
  font-family: var(--rh-font-family-heading, RedHatDisplay, "Red Hat Display", "Noto Sans Arabic", "Noto Sans Hebrew", "Noto Sans JP", "Noto Sans KR", "Noto Sans Malayalam", "Noto Sans SC", "Noto Sans TC", "Noto Sans Thai", Helvetica, Arial, sans-serif);
  font-size: var(--rh-font-size-body-text-xl, 1.25rem) !important;
  font-weight: var(--rh-font-weight-body-text-medium, 500);
  line-height: var(--rh-line-height-heading, 1.3) !important;
}

#container.promo #footer {
  margin: 0;
}

#container.promo.has-image {
  grid-template-columns: auto;
}

@container promo (max-width: 767px) {
  #container.has-image {
    grid-template-columns: auto;
  }
}

@container promo (min-width: 768px) {
  #container {
    width: 100%;

    --_promo-standard-inline-padding: var(--rh-space-2xl, 32px);
  }

  #container.promo.has-image {
    grid-template-columns: auto auto;
  }

  #container #image {
    order: 0;
    max-width: var(--_promo-image-width);
  }

  #container #body {
    max-width: var(--_promo-body-width);
  }

  #container #header {
    margin-block-start: var(--rh-space-lg, 16px);
  }

  #container:not(.has-image) #body {
    max-width: 100cqi;
  }

  #container #header ::slotted(*) {
    --_promo-heading-size: var(--rh-font-size-body-text-2xl, 1.5rem);
  }

  #container.standard {
    --_promo-standard-inline-padding: var(--rh-space-3xl, 48px);

    row-gap: 0;
    grid-template: auto / auto auto;
  }

  #container.standard #footer {
    justify-self: end;
  }
}

@container promo (max-width: 767px) and (width: 100vw) {
  #container #body {
    margin-block-start: var(--rh-space-4xl, 64px);
  }

  #container #image {
    margin-block-end: var(--rh-space-4xl, 64px);
  }
}

@container promo (min-width: 1093px) {
  #container:not(.has-image) #image.empty {
    display: block !important;
    order: 1;
    grid-column: 2/3;
    width: var(--_promo-image-width);
  }
}

/* full width promo */
@container promo (min-width: 1093px) or (min-width: 100vw) {
  #container:not(.standard) {
    border-color: transparent;
    gap: var(--rh-space-2xl, 32px);
    padding-inline: var(--rh-space-lg, 16px);
    place-items: center;
    width: calc(100% - 2 * var(--rh-space-lg, 16px));
  }

  #container #header,
  #container #body,
  #container #footer {
    margin-inline: 0;
  }
}

